# mathgl

./: CMakeLists.txt  ChangeLog.txt  mathgl_es.po  mathgl_ru.po  todo.txt
examples/: CMakeLists.txt  full_test.cpp  wnd_samples.cpp
include/mgl2/: Fl_MathGL.h  abstract.h  base.h  base_cf.h  canvas.h  canvas_cf.h  data.h  data_cf.h  datac.h  datac_cf.h  define.h  fltk.h  font.h  mgl.h  parser.h  wnd.h
mgllab/: editor.cpp  help.cpp  mathgl.cpp  mgllab.cpp  mgllab.h  table.cpp
scripts/: CMakeLists.txt
src/: addon.cpp  axis.cpp  base.cpp  base_cf.cpp  canvas.cpp  complex.cpp  complex_ex.cpp  complex_io.cpp  cont.cpp  crust.cpp  data.cpp  data_ex.cpp  data_io.cpp  data_png.cpp  eval.cpp  evalc.cpp  evalp.cpp  exec_gr.cpp  export.cpp  export_2d.cpp  export_3d.cpp  fft.cpp  fit.cpp  font.cpp  opengl.cpp  other.cpp  parser.cpp  pde.cpp  pixel.cpp  pixel_gen.cpp  pixel_pix.cpp  plot.cpp  prim.cpp  surf.cpp  vect.cpp  volume.cpp  window.cpp
src/prc/: oPRCFile.cc
texinfo/: core_en.texi  core_ru.texi  symbols_en.texi  version_hist.txt  web_en.texi  web_ru.texi
udav/: args_dlg.cpp  prop_dlg.cpp
utils/: CMakeLists.txt  mglcgi.cpp  mglconv.cpp  mglview.cpp
widgets/: fltk.cpp  glut.cpp  qt.cpp
